style(feature__lg): fix white space
This commit is to remove white spaces in the feature info block and
resize image in the feature image block for lg screens.

The change will ensure that the two blocks on the page renders well on
lg devices and window or screen sizes.

--- a/style.css
+++ b/style.css
@@ -2285,7 +2285,7 @@ vertical-align: top;
   width: 100%;
   justify-content: center;
   align-items: center;
-  padding-top: 10rem;
+  padding-top: 3rem;
 }
 
 .main__feature {
@@ -2294,7 +2294,8 @@ vertical-align: top;
   display: flex;
   flex-direction: column-reverse;
   justify-content: center;
-  gap: 4rem;
+  gap: 1.5rem;
+  margin-bottom:3rem;
 }
 
 .feature__image-block {
@@ -2325,9 +2326,10 @@ vertical-align: top;
 }
 
 .feature__info-heading {
-  font-size: 2.6rem;
+  font-size: 2.8rem;
   color: #000000;
   font-weight: 600;
+  line-height:1.2;
 }
 
 .feature__info-text-block {
@@ -2338,7 +2340,7 @@ vertical-align: top;
 }
 
 .feature__info-text {
-  font-size: 1.8rem;
+  font-size: 2rem;
 }
 
 .feature__link-block {
@@ -2349,8 +2351,9 @@ vertical-align: top;
 }
 
 .feature__link {
-  font-size: 1.7rem;
+  font-size: 2rem;
   text-decoration: underline;
+  font-weight:600;
 }
 
 /* footer */
